# attestation-service

./: Cargo.toml  Dockerfile.rvps  README.md
.github/workflows/: basic.yml  release.yml
as-types/: Cargo.toml
attestation-service/: Cargo.toml
attestation-service/src/cgo/: go.mod  go.sum
attestation-service/src/policy_engine/opa/: mod.rs
attestation-service/src/verifier/: mod.rs
attestation-service/src/verifier/az_tdx_vtpm/: mod.rs
attestation-service/src/verifier/cca/: mod.rs
attestation-service/src/verifier/tdx/: claims.rs  mod.rs
docs/: REFERENCE_VALUES.md  未命名绘图.drawio
lib/src/core/: mod.rs
lib/src/core/policy_engine/: default_policy.rego
rvps/: .gitignore  .gitmodules  Cargo.toml  README.md
rvps/docs/: IMPLEMENTATION.md  cache_development_guide.md  extractor_development_guide.md  preprocessor_development_guide.md
rvps/in-totolib-rs/: .gitignore  Cargo.toml  README.md
rvps/in-totolib-rs/src/: build.rs  lib.rs
rvps/in-totolib-rs/src/intoto/: go.mod  go.sum  intoto.go  mod.rs
rvps/in-totolib-rs/tests/bad_provenance/: package.d3ffd108.link
rvps/src/: lib.rs  reference_value.rs
rvps/src/cache/: mod.rs
rvps/src/cache/simple/: README.md  mod.rs
rvps/src/extractors/: mod.rs
rvps/src/extractors/extractor_modules/: mod.rs
rvps/src/pre_processor/: mod.rs
rvps/src/pre_processor/ware/: log.rs  mod.rs
server/src/: main.rs
src/: config.rs  lib.rs
src/rvps/: mod.rs  proxy.rs  reference_value.rs  server.rs
src/verifier/tdx/: mod.rs
tools/poller/: Cargo.toml  README.md  docker-compose.yaml
tools/poller/src/: main.rs  redis.rs
(+6 files in other folders)
