[package]
name = "in-totolib-rs"
version = "0.2.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0"
in-toto = { git = "https://github.com/in-toto/in-toto-rs", rev = "c577f62" }
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }