[package]
name = "poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap  = { version = "3.2.6", features = [ "cargo" ] }
lazy_static = "1.4.0"
log = "0.4.17"
redis = "0.22.2"
reqwest = "0.11.13"
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0", features = [ "rt", "macros", "rt-multi-thread" ] }